syntax = "proto3";

option csharp_namespace = "ClientService";

package BusinessCardApi;

service ClientGrpc {
    rpc AddClientGrpc(AddClientGrpcCommand) returns (ClientGrpcCommandResult) {}
    rpc EditClientGrpc(EditClientGrpcCommand) returns (ClientGrpcCommandResult) {}
    rpc RemoveClientGrpc(RemoveClientGrpcCommand) returns (ClientGrpcCommandResult){}
    rpc GetPaginatedClientsGrpc(GetPaginatedClientsGrpcQuery) returns (GetPaginatedClientsGrpcQueryResult){}
    rpc GetClientByIdGrpc(GetClientByIdGrpcQuery) returns (ClientGrpcResult){}

    rpc AddMemberGrpc(AddMemberGrpcCommand) returns (MemberGrpcCommandResult){}
    rpc AddMemberWithIdentityGrpc(AddMemberGrpcCommand) returns (MemberGrpcCommandResult){}
    
    rpc EditMemberGrpc(EditMemberGrpcCommand) returns (MemberGrpcCommandResult){}
    rpc GetPaginatedMembersGrpc(GetPaginatedMembersGrpcQuery)returns(GetPaginatedMembersGrpcQueryResult){}
    rpc GetMemberByIdGrpc(GetMemberByIdGrpcQuery)returns(MemberGrpcResult){}
}


message AddClientGrpcCommand {
    string companyName = 1;
    bool isDiscreet = 2;
    int32 subscription = 3;
}

message EditClientGrpcCommand {
    string id = 1;
    string companyName = 2;
    bool isDiscreet = 3;
    int32 subscription = 4;
}

message RemoveClientGrpcCommand {
    string id = 1;
}

message AddMemberGrpcCommand {
    string firstName = 1;
    string lastName = 2;
    string middleName = 3;
    string nameSuffix = 4;
    string phoneNumber = 5;
    string email = 6;
    string address = 7;
    string occupation = 8;
    string facebook = 9;
    string linkedIn = 10;
    string instagram = 11;
    string pinterest = 12;
    string twitter = 13;
    string clientId = 14;
}

message AddMemberWithIdentityGrpcCommand {
    string firstName = 1;
    string lastName = 2;
    string middleName = 3;
    string nameSuffix = 4;
    string phoneNumber = 5;
    string email = 6;
    string address = 7;
    string occupation = 8;
    string facebook = 9;
    string linkedIn = 10;
    string instagram = 11;
    string pinterest = 12;
    string twitter = 13;
    string clientId = 14;
    string identity = 15;
}

message EditMemberGrpcCommand {
    string nameSuffix = 1;
    string phoneNumber = 2;
    string email = 3;
    string address = 4;
    string occupation = 5;
    string facebook = 6;
    string linkedIn = 7;
    string instagram = 8;
    string pinterest = 9;
    string twitter = 10;
    string clientId = 11;
    string subscription = 12;
    int32 subscriptionLevel = 13;
    string cardKey = 14;
    string id = 15;
    string firstName = 16;
    string middleName = 17;
    string lastName = 18;
}


message ClientGrpcCommandResult {
    string clientId = 1;
}

message GetPaginatedClientsGrpcQuery {
    int32 pageSize = 1;
    int32 pageNumber = 2;
    string name = 3;
}

message GetClientByIdGrpcQuery {
    string id = 1;
}

message GetPaginatedClientsGrpcQueryResult {
    int32 pageSize = 1;
    int32 pageNumber = 2;
    int32 totalCount = 3;
    repeated ClientGrpcResult clients = 4;
}

message ClientGrpcResult {
    string clientId = 1;
    string companyName = 2;
    bool isDiscreet = 3;
    int32 subscriptionLevel = 4;
    int32 cardHolders = 5;
    int32 nonCardHolders = 6;
    string createdBy = 7;
    string modifiedBy = 8;
    string createdOn = 9;
    string modifiedOn = 10;
    string subscription = 11;
    bool isActive = 12;
}

message GetPaginatedMembersGrpcQuery{
    string clientId = 1;
    int32 pageSize = 2;
    int32 pageNumber = 3;
}

message GetMemberByIdGrpcQuery{
    string clientId = 1;
    string memberId = 2;
}

message GetPaginatedMembersGrpcQueryResult {
    int32 pageSize = 1;
    int32 pageNumber = 2;
    int32 totalCount = 3;
    repeated MemberGrpcResult members = 4;
}

message MemberGrpcResult {
    string fullName = 1;
    string phoneNumber = 2;
    string email = 3;
    string address = 4;
    string occupation = 5;
    string facebook = 6;
    string linkedIn = 7;
    string instagram = 8;
    string pinterest = 9;
    string twitter = 10;
    string clientId = 11;
    string subscription = 12;
    int32 subscriptionLevel = 13;
    string cardKey = 14;
    string id = 15;
    string firstName = 16;
    string middleName = 17;
    string lastName = 18;
    string nameSuffix = 19;
}

message MemberGrpcCommandResult {
    string memberId = 1;
}